# Corewar

./: ._asm  ._cor  ._examples_assembler  ._libft  ._vp_virtual_machine  .gitignore  CMakeLists.txt  Makefile  README.md  asm  author  blue_cheese.s  corewar  corewar.h  hello.txt  op.c  op.h
cor/: ._virtual_machine
cor/instructions/: additional_func.c  vp_add.c  vp_aff.c  vp_and.c  vp_fork.c  vp_ld.c  vp_ldi.c  vp_lfork.c  vp_live.c  vp_lld.c  vp_lldi.c  vp_or.c  vp_st.c  vp_sti.c  vp_sub.c  vp_xor.c  vp_zjmp.c
cor/virtual_machine/: ._bigzork.cor  ._helltrain.cor  ._privet.cor  ._zork.cor  additional_func.c  check_flag.c  dump_print.c  flag_in_arg.c  ft_error_output.c  init_skrr_global.c  new_chmp.c  privet.cor  privet.s  reg_dir_ind.c  support_ft_instr.c  support_lib_ft.c  virtualm.h  vp_basic.c  vp_commands.c  vp_err_u.c  vp_get_winner.c  vp_instructions.c  vp_load_from_into.c  vp_output_err.c  vp_virtual_main.c
cor/visualisation/: ds_find_data.c  ds_highlighting.c  ds_intro.c  ds_live.c  ds_print_memory.c  ds_printdata.c  ds_tools.c  ds_visualize.c  visualize.h
examples_assembler/: ._asm  zork.s
libft/: ._src  .nfs.2005147d.e130  Makefile
libft/src/: ._ft_printf
libft/src/ft_printf/: ft_printf.c  ft_printf.h  vp_additional_function.c  vp_big_fck_s.c  vp_extra_function.c  vp_spec.c  vp_spec_extra.c  vp_treads.c  vp_widtho_preco_fuct.c
libft/src/get_next_line/: get_next_line.c  get_next_line.h
libft/src/libft/: ._libft.h  author  ft_atoi.c  ft_bzero.c  ft_cntdigits.c  ft_cntwords.c  ft_intc.c  ft_intmalloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putint_mass.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+26 more)
vp_virtual_machine/: ._bigzork.cor  ._zork.cor  helltrain.cor  op.c  test  virtual_main.c  virtualm.h  virtualm.h.gch  vp_basic.c  vp_commands.c  vp_err_u.c  vp_virtual_main.c  zork.cor  zork.s
